--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "author": "fnadalich",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
