--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "description": "Desafío 4",
-  "name": "desafio4-fnadalich",
+  "description": "Preentrega 2",
+  "name": "preentrega2-fnadalich",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.2.1",
+    "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4"
   },
