--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "description": "Preentrega 2",
-  "name": "preentrega2-fnadalich",
+  "description": "Preentrega 3",
+  "name": "preentrega3-fnadalich",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js --mode development",
+    "start": "node src/app.js --mode production"
   },
   "author": "fnadalich",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -22,10 +24,12 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   },
   "keywords": []
