--- a/.env.development
+++ b/.env.development
@@ -19,3 +19,8 @@ CALLBAK_URL_GH = http://localhost:8080/api/sessions/githubcallback
 #jwt
 
 SECRET_KEY_TOKEN = coderSecretTokenKey
+
+#Environment
+
+ENVIRONMENT = development
+LOG_LEVEL = debug
