--- a/.env.production
+++ b/.env.production
@@ -19,3 +19,7 @@ CALLBAK_URL_GH = http://localhost:8080/api/session/githubcallback
 #jwt
 
 SECRET_KEY_TOKEN = coderSecretTokenKey
+
+#Environment
+ENVIRONMENT = production
+LOG_LEVEL = info
