--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "description": "Preentrega 3",
-  "name": "preentrega3-fnadalich",
+  "description": "Documentacion API",
+  "name": "documentacionapi-fnadalich",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "fnadalich",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
@@ -22,11 +23,14 @@
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
