--- a/.env.test
+++ b/.env.test
@@ -4,16 +4,16 @@ PORT = 8080
 #MongoDB
 USER_MONGO = fnadalich
 PASSWORD_MONGO = coder.018kva
-DB_MONGO = ecommerce
+DB_MONGO = test
 
 #GithubLogin
 CLIENT_ID_GH = Iv23livfaHgAsz1H4HXk
-CLIENT_SECRET_GH = c90ed4c2c2d1414b826
-CALLBAK_URL_GH = http://localhost:8080/api/sessions/githubcallback
+CLIENT_SECRET_GH = c90ed4c2c2d1414b826425b9699c9285c88321e4
+CALLBAK_URL_GH = http://localhost:8080/api/session/githubcallback
 
 #jwt
 SECRET_KEY_TOKEN = coderSecretTokenKey
 
 #Environment
-ENVIRONMENT = development
-LOG_LEVEL = debug
+ENVIRONMENT = production
+LOG_LEVEL = info
