--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "cart-test": "mocha test/cart.test.js --mode test",
+    "products-test": "mocha test/products.test.js --mode test",
+    "user-test": "mocha test/user.test.js --mode test",
+    "supertest-test": "mocha test/supertest.test.js --mode test",
     "dev": "nodemon src/app.js --mode development",
+    "test": "nodemon src/app.js --mode test",
     "start": "node src/app.js --mode production"
   },
   "author": "fnadalich",
@@ -13,6 +17,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "bcrypt": "^5.1.1",
+    "chai": "^5.1.1",
     "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -20,6 +25,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.6.0",
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
@@ -29,6 +35,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.4",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0"
