--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.6.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
